<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/tvuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity2_name" />
    <TextView
        android:id="@+id/tvlastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity2_lastname" />
    <TextView
        android:id="@+id/tvemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity2_email" />
    <TextView
        android:id="@+id/tvgender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity2_genders" />
    <Button
        android:id="@+id/btnshare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity2_btnshare"/>
</LinearLayout>